# FluentQML

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: main.py  main.qml
examples/pages/: ButtonPage.qml  CardPage.qml  CarouselPage.qml  ChartPage.qml  ContainerPage.qml  EffectsPage.qml  FeedbackPage.qml  IconPage.qml  InputPage.qml  LabelPage.qml  MenuPage.qml  NavigationPage.qml  SettingsPage.qml
examples/resources/: __init__.py  gallery.qrc
fluentqml/: __init__.py
fluentqml/FluentQML/: Enums.qml  NavigationWindowCore.qml  WindowsCore.qml  qmldir
fluentqml/FluentQML/FluentEnums/: Constants.qml  Icons.qml  Metrics.qml  StateColor.qml  StatusLevel.qml  Theme.qml  qmldir
fluentqml/FluentQML/_internal/: ContentFrame.qml  WindowsBar.qml  WindowsFilled.qml  WindowsSplit.qml
fluentqml/FluentQML/effects/: qmldir
fluentqml/FluentQML/navigation/: NavigationBarItem.qml  (+4 more)
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  shard.rs
scripts/: FpsOverlay.qml  copy_all_icons.py  extract_icons.py  extract_translations.py  fps_probe.py  run_with_fps.py  verify_coverage.py
tests/: conftest.py  test_carousel_item_delegate.py  test_config.py  test_config_extended.py  test_core.py  test_providers.py  test_smoke.py  test_updater.py  test_window_buttons.py
tests/qml/: probe_all_components.py  test_flow_layout.qml  test_layout_fillwidth.qml  test_lazy_reload.py  test_list_widget.qml  test_messagebox_overlay.qml  test_shortcut_editor.qml  test_splash_default_mount.py  test_splash_timing.py
(+124 files in other folders)
